# miso-smc

./: Main.hs  default.nix  hypergraph-rewriting.nix  index.html  miso-smc.cabal  miso-smc.nix
miso-smc.jsexe/: lib.js  out.js
