name:                miso-smc
version:             0.1.0.0
synopsis:            miso-smc
category:            Web
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
author: Paul Wilson
maintainer: sf@statusfailed.com

executable miso-smc
  main-is:             Main.hs
  build-depends:       base, miso, aeson, containers, hypergraph-rewriting, bimap
  default-language:    Haskell2010
